--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.1",
     "react-piano": "^3.1.3",
     "tailwindcss": "^4.1.14",
-    "three": "^0.180.0"
+    "three": "^0.180.0",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
