--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "@tonejs/midi": "^2.0.28",
+    "midi-sounds-react": "^1.2.54",
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-piano": "^3.1.3",
+    "soundfont-player": "^0.12.0",
     "tailwindcss": "^4.1.14",
     "three": "^0.180.0",
     "tone": "^15.1.22"
